--- a/01_cat_vs_dog_pt.ipynb
+++ b/01_cat_vs_dog_pt.ipynb
@@ -3128,7 +3128,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3840,6 +3842,63 @@
    "source": [
     "url = \"https://petzpark.com.au/cdn/shop/articles/Dog-and-Cat-Stress_900x.jpg?v=1660605269\"\n",
     "predict_image_from_url(url, model_mobilev2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 💾 Save the model to your local machine "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "94381f471ed546bb96a62493bbc7d5be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf09378208734c2581327e3877eed251",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/workspace/models/MobileNetV2_model/'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_path = \"/workspace/models\"  # This maps to your host machine\n",
+    "os.makedirs(local_path, exist_ok=True)\n",
+    "mlflow.artifacts.download_artifacts(f\"runs:/{run_id}/MobileNetV2_model\", dst_path=local_path)"
    ]
   }
  ],
