feat: save model to local

--- a/04_skin_pt.ipynb
+++ b/04_skin_pt.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3e858e4a-0070-4898-bc6e-672df9f27276",
    "metadata": {},
    "outputs": [],
@@ -211,13 +211,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-08-18 18:20:50 +0000] [8490] [INFO] Starting gunicorn 23.0.0\n",
-      "[2025-08-18 18:20:50 +0000] [8490] [INFO] Listening at: http://0.0.0.0:5000 (8490)\n",
-      "[2025-08-18 18:20:50 +0000] [8490] [INFO] Using worker: sync\n",
-      "[2025-08-18 18:20:50 +0000] [8491] [INFO] Booting worker with pid: 8491\n",
-      "[2025-08-18 18:20:50 +0000] [8492] [INFO] Booting worker with pid: 8492\n",
-      "[2025-08-18 18:20:50 +0000] [8493] [INFO] Booting worker with pid: 8493\n",
-      "[2025-08-18 18:20:50 +0000] [8494] [INFO] Booting worker with pid: 8494\n"
+      "[2025-08-19 11:54:52 +0000] [287] [INFO] Starting gunicorn 23.0.0\n",
+      "[2025-08-19 11:54:52 +0000] [287] [INFO] Listening at: http://0.0.0.0:5000 (287)\n",
+      "[2025-08-19 11:54:52 +0000] [287] [INFO] Using worker: sync\n",
+      "[2025-08-19 11:54:52 +0000] [288] [INFO] Booting worker with pid: 288\n",
+      "[2025-08-19 11:54:52 +0000] [289] [INFO] Booting worker with pid: 289\n",
+      "[2025-08-19 11:54:52 +0000] [290] [INFO] Booting worker with pid: 290\n",
+      "[2025-08-19 11:54:52 +0000] [291] [INFO] Booting worker with pid: 291\n"
      ]
     },
     {
@@ -6672,6 +6672,58 @@
     "\n",
     "**Are you up for creating one of the most comprehensive skin lesion models out there?** 🚀\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ed2d58d-9f88-4b0d-9cb0-81cee6b9803c",
+   "metadata": {},
+   "source": [
+    "## 💾 Save the model to the local machine "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a9ff3c4-001c-4156-9a9e-3b4e3bead7d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded: True\n",
+      "Model type: <class 'torchvision.models.resnet.ResNet'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/08/19 11:58:17 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved successfully to /workspace/models/skin\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Current model loading code\n",
+    "model_path = \"/workspace/mlartifacts/125500262560686020/models/m-868ddaae1ee54e05b07b526c44a9d809/artifacts\"\n",
+    "trained_model = mlflow.pytorch.load_model(f\"file://{model_path}\")\n",
+    "print(\"Model loaded:\", trained_model is not None)\n",
+    "print(\"Model type:\", type(trained_model))\n",
+    "\n",
+    "# Create the destination directory if it doesn't exist\n",
+    "os.makedirs(\"/workspace/models/skin\", exist_ok=True)\n",
+    "\n",
+    "# Save the model to the new location\n",
+    "mlflow.pytorch.save_model(trained_model, \"/workspace/models/skin\")\n",
+    "print(\"Model saved successfully to /workspace/models/skin\")"
    ]
   }
  ],
