chore: update model save path

--- a/01_cat_vs_dog_pt.ipynb
+++ b/01_cat_vs_dog_pt.ipynb
@@ -3848,18 +3848,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 💾 Save the model to your local machine "
+    "# 💾 Save the model to the local machine "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94381f471ed546bb96a62493bbc7d5be",
+       "model_id": "895f8d6b2ec941e99fafb63b4551755f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3873,7 +3873,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf09378208734c2581327e3877eed251",
+       "model_id": "57e7d00d5ac84a0ea5f58f17069a2407",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3887,16 +3887,16 @@
     {
      "data": {
       "text/plain": [
-       "'/workspace/models/MobileNetV2_model/'"
+       "'/workspace/models/cat_dog/MobileNetV2_model/'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "local_path = \"/workspace/models\"  # This maps to your host machine\n",
+    "local_path = \"/workspace/models/cat_dog\"  # This maps to your host machine\n",
     "os.makedirs(local_path, exist_ok=True)\n",
     "mlflow.artifacts.download_artifacts(f\"runs:/{run_id}/MobileNetV2_model\", dst_path=local_path)"
    ]
