--- a/04_skin_pt.ipynb
+++ b/04_skin_pt.ipynb
@@ -77,7 +77,9 @@
     "\n",
     "**Duration**: ~2-3 hours for full pipeline execution\n",
     "\n",
-    "**Output**: Production-ready skin cancer classification model with external validation"
+    "**Output**: Production-ready skin cancer classification model with external validation\n",
+    "\n",
+    "Check out a shorter version of this notebook on [Kaggle](https://www.kaggle.com/code/lizk75/skin-cancer-resnet-balanced-98-acc)"
    ]
   },
   {
