docs: update intro and acc

--- a/01_cat_vs_dog_pt.ipynb
+++ b/01_cat_vs_dog_pt.ipynb
@@ -23,7 +23,7 @@
     "    * 🔗 **GCP MLflow**: MLflow server running on GCP VM for experiment tracking\n",
     "    * 🛠️ **Tools**: Docker, WSL2, uv package manager\n",
     "\n",
-    "- **Level**: Advanced Data Science\n",
+    "- 🧑‍💻 **Skill Level:** Beginner Data Scientist\n",
     "\n",
     "- **🎯 Goals** : Find the best CNN model that suits our dataset by comparing architectures, fine-tuning parameters, and applying data augmentation for optimal performance.\n",
     "\n",
