--- a/03_digit_recognizer_tf.ipynb
+++ b/03_digit_recognizer_tf.ipynb
@@ -11,7 +11,7 @@
     "- 🧠 **Model:** Convolutional Neural Network (CNN) with Data Augmentation.\n",
     "- 📈 **Evaluation:** Accuracy, Loss, Confusion Matrix.  \n",
     "- 🚀 **Tools:** TensorFlow/Keras.  \n",
-    "- 🧑‍💻 **Skill Level:** Intermediate Data Scientist.  \n",
+    "- 🧑‍💻 **Skill Level:** Beginner Data Scientist.\n",
     "- 🎯 **Goal:** Develop an accurate and robust model that can recognize handwritten digits efficiently.\n",
     "\n",
     "- Requirements\n",
