--- a/04_skin_ham10000_pt.ipynb
+++ b/04_skin_ham10000_pt.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "This notebook demonstrates state-of-the-art skin cancer detection using the HAM10000 dataset - a comprehensive collection of 10,015 dermatoscopic images spanning 7 different skin lesion types. We tackle the challenging problem of **highly imbalanced medical data** through advanced data augmentation and class balancing techniques.\n",
     "\n",
-    "**Key Achievement**: xx% accuracy on HAM10000 → xx% on external ISIC 2019 validation\n",
+    "**Key Achievement**: 87% accuracy on HAM10000 → 70% on external ISIC 2019 validation\n",
+    "\n",
+    "🧑‍💻 **Skill Level:** Intermediate Data Scientist\n",
     "\n",
     "---\n",
     "\n",
@@ -79,7 +81,7 @@
     "\n",
     "**Output**: Production-ready skin cancer classification model with external validation\n",
     "\n",
-    "Check out a shorter version of this notebook on [Kaggle](https://www.kaggle.com/code/lizk75/skin-cancer-resnet-balanced-98-acc)"
+    "Check out a shorter version of this notebook on [Kaggle](https://www.kaggle.com/code/lizk75/skin-cancer-resnet-balanced-87-acc)"
    ]
   },
   {
@@ -1344,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7a30e9f9-f5a7-4d8c-88d3-8a58714d8b40",
    "metadata": {
     "scrolled": true
@@ -2792,7 +2794,7 @@
    "source": [
     "train_losses, val_losses, train_accs, val_accs, test_loss, test_accuracy = train_cnn_model(\n",
     "    model, train_loader, val_loader, test_loader, criterion, optimizer,\n",
-    "    num_epochs=150, patience=20, image_size=32, data_augmentation=False, \n",
+    "    num_epochs=150, patience=20, image_size=32, data_augmentation=False,\n",
     "    notes=\"SimpleCNN-500Samples\", data_balancing=\"Resample-500\"\n",
     ")"
    ]
@@ -4399,7 +4401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "afd8f433-2a2e-4f75-800e-76230941518f",
    "metadata": {},
    "outputs": [
@@ -5036,7 +5038,7 @@
     "train_losses, val_losses, train_accs, val_accs, test_loss, test_accuracy = train_cnn_model(\n",
     "    model, train_loader, val_loader, test_loader, criterion, optimizer,\n",
     "    num_epochs=50, patience=10, image_size=224, data_augmentation=True,\n",
-    "    notes=\"ResNet50-DA-ClassSpecificAug\", \n",
+    "    notes=\"ResNet50-DA-ClassSpecificAug\",\n",
     "    data_balancing=\"class-specific augmentation rates\"\n",
     ")"
    ]
@@ -5115,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "02e14511-fb9c-42b2-ab3f-ea96297188e7",
    "metadata": {},
    "outputs": [
@@ -5134,15 +5136,15 @@
    "source": [
     "# SPLIT FIRST - by unique images to avoid any overlap\n",
     "train_df, test_df = train_test_split(\n",
-    "    metadata, \n",
-    "    test_size=0.2, \n",
-    "    random_state=42, \n",
+    "    metadata,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
     "    stratify=metadata['label']\n",
     ")\n",
     "train_df, val_df = train_test_split(\n",
-    "    train_df, \n",
-    "    test_size=0.25, \n",
-    "    random_state=42, \n",
+    "    train_df,\n",
+    "    test_size=0.25,\n",
+    "    random_state=42,\n",
     "    stratify=train_df['label']\n",
     ")\n",
     "\n",
@@ -5154,7 +5156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "a0428cdf-ad07-47f7-9111-d89ca94b35f5",
    "metadata": {},
    "outputs": [
@@ -5206,7 +5208,7 @@
     "def balance_training_data(train_df, data_aug_rate):\n",
     "    \"\"\"Balance only the training data by class\"\"\"\n",
     "    balanced_dfs = []\n",
-    "    \n",
+    "\n",
     "    for class_idx, rate in enumerate(data_aug_rate):\n",
     "        class_df = train_df[train_df['label'] == class_idx]\n",
     "        if len(class_df) > 0 and rate > 0:\n",
@@ -5216,7 +5218,7 @@
     "        elif len(class_df) > 0:\n",
     "            # Rate 0 means use original\n",
     "            balanced_dfs.append(class_df)\n",
-    "    \n",
+    "\n",
     "    return pd.concat(balanced_dfs, ignore_index=True)\n",
     "\n",
     "# Balance only training data\n",
@@ -5235,7 +5237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "395d800e-84ec-4797-8f3b-fd30e397288f",
    "metadata": {},
    "outputs": [
@@ -5259,16 +5261,16 @@
     "    train_imgs = set(train_df['image_id'].unique())\n",
     "    val_imgs = set(val_df['image_id'].unique())\n",
     "    test_imgs = set(test_df['image_id'].unique())\n",
-    "    \n",
+    "\n",
     "    train_val_overlap = train_imgs.intersection(val_imgs)\n",
     "    train_test_overlap = train_imgs.intersection(test_imgs)\n",
     "    val_test_overlap = val_imgs.intersection(test_imgs)\n",
-    "    \n",
+    "\n",
     "    print(f\"\\nImage overlap check:\")\n",
     "    print(f\"Train-Val overlap: {len(train_val_overlap)} images\")\n",
     "    print(f\"Train-Test overlap: {len(train_test_overlap)} images\")\n",
     "    print(f\"Val-Test overlap: {len(val_test_overlap)} images\")\n",
-    "    \n",
+    "\n",
     "    if len(train_val_overlap) == 0 and len(train_test_overlap) == 0 and len(val_test_overlap) == 0:\n",
     "        print(\"✓ No image overlap between sets - clean split!\")\n",
     "    else:\n",
@@ -5894,7 +5896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "841a9b2d-3f52-46b9-ab69-40344586b881",
    "metadata": {},
    "outputs": [
@@ -6336,7 +6338,7 @@
     "train_losses, val_losses, train_accs, val_accs, test_loss, test_accuracy = train_cnn_model(\n",
     "    model, train_loader, val_loader, test_loader, criterion, optimizer,\n",
     "    data_balancing=\"class-specific augmentation rates\",\n",
-    "    scheduler=scheduler, \n",
+    "    scheduler=scheduler,\n",
     "    num_epochs=150, patience=20, image_size=224, data_augmentation=True,\n",
     "    notes=\"ResNet50-DA-SplitFirst-ClassAug-Scheduler-Drop0.1-L2\"\n",
     ")"
