docs: add demo link skindx

--- a/04_skin_ham10000_pt.ipynb
+++ b/04_skin_ham10000_pt.ipynb
@@ -81,7 +81,11 @@
     "\n",
     "**Output**: Production-ready skin cancer classification model with external validation\n",
     "\n",
-    "Check out a shorter version of this notebook on [Kaggle](https://www.kaggle.com/code/lizk75/skin-cancer-resnet-balanced-87-acc)"
+    "Check out a shorter version of this notebook on [Kaggle](https://www.kaggle.com/code/lizk75/skin-cancer-resnet-balanced-87-acc)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "🌐 **Interactive Demo and Documentation** : https://skindx.lisekarimi.com"
    ]
   },
   {
